@@ -1,0 +1,4 @@
+public function filters()
+{
+	return array();
+}
